parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANY
    DATABASE
    NEWLINE

Grammar

Rule 0     S' -> statement
Rule 1     statement -> statement2
Rule 2     statement -> statement statement2
Rule 3     statement2 -> select_statement SEMICOLON
Rule 4     statement2 -> insert_statement
Rule 5     statement2 -> update_statement
Rule 6     statement2 -> delete_statement
Rule 7     statement2 -> create_statement
Rule 8     statement2 -> alter_statement
Rule 9     statement2 -> drop_statement
Rule 10    statement2 -> select_statement UNION select_statement SEMICOLON
Rule 11    statement2 -> select_statement UNION ALL select_statement SEMICOLON
Rule 12    statement2 -> select_statement INTERSECT select_statement SEMICOLON
Rule 13    statement2 -> select_statement EXCEPT select_statement SEMICOLON
Rule 14    select_statement -> SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause having_clause order_by_clause limit_clause
Rule 15    select_statement -> SELECT dist_list select_list FROM table_expr join_expr where_clause order_by_clause
Rule 16    select_statement -> SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause having_clause
Rule 17    select_statement -> SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause order_by_clause limit_clause
Rule 18    select_statement -> SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause
Rule 19    select_statement -> SELECT dist_list select_list FROM table_expr join_expr where_clause order_by_clause limit_clause
Rule 20    select_statement -> SELECT dist_list select_list FROM table_expr join_expr where_clause
Rule 21    select_statement -> SELECT dist_list select_list FROM table_expr join_expr
Rule 22    select_statement -> SELECT dist_list select_list FROM table_expr where_clause group_by_clause having_clause order_by_clause limit_clause
Rule 23    select_statement -> SELECT dist_list select_list FROM table_expr where_clause order_by_clause
Rule 24    select_statement -> SELECT dist_list select_list FROM table_expr where_clause group_by_clause having_clause
Rule 25    select_statement -> SELECT dist_list select_list FROM table_expr where_clause group_by_clause order_by_clause limit_clause
Rule 26    select_statement -> SELECT dist_list select_list FROM table_expr where_clause group_by_clause
Rule 27    select_statement -> SELECT dist_list select_list FROM table_expr where_clause order_by_clause limit_clause
Rule 28    select_statement -> SELECT dist_list select_list FROM table_expr where_clause
Rule 29    select_statement -> SELECT dist_list select_list FROM table_expr
Rule 30    select_statement -> SELECT select_list FROM table_expr join_expr where_clause group_by_clause having_clause order_by_clause limit_clause
Rule 31    select_statement -> SELECT select_list FROM table_expr join_expr where_clause order_by_clause
Rule 32    select_statement -> SELECT select_list FROM table_expr join_expr where_clause group_by_clause having_clause
Rule 33    select_statement -> SELECT select_list FROM table_expr join_expr where_clause group_by_clause order_by_clause limit_clause
Rule 34    select_statement -> SELECT select_list FROM table_expr join_expr where_clause group_by_clause
Rule 35    select_statement -> SELECT select_list FROM table_expr join_expr where_clause order_by_clause limit_clause
Rule 36    select_statement -> SELECT select_list FROM table_expr join_expr where_clause
Rule 37    select_statement -> SELECT select_list FROM table_expr join_expr
Rule 38    select_statement -> SELECT select_list FROM table_expr where_clause group_by_clause having_clause order_by_clause limit_clause
Rule 39    select_statement -> SELECT select_list FROM table_expr where_clause order_by_clause
Rule 40    select_statement -> SELECT select_list FROM table_expr where_clause group_by_clause having_clause
Rule 41    select_statement -> SELECT select_list FROM table_expr where_clause group_by_clause order_by_clause limit_clause
Rule 42    select_statement -> SELECT select_list FROM table_expr where_clause group_by_clause
Rule 43    select_statement -> SELECT select_list FROM table_expr where_clause order_by_clause limit_clause
Rule 44    select_statement -> SELECT select_list FROM table_expr where_clause
Rule 45    select_statement -> SELECT select_list FROM table_expr
Rule 46    select_list -> select_list COMMA select_item
Rule 47    select_list -> select_item
Rule 48    select_list -> TIMES
Rule 49    select_list -> conditional_expr
Rule 50    dist_list -> DISTINCT
Rule 51    select_item -> expression AS ID
Rule 52    select_item -> expression
Rule 53    select_item -> COALESCE LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
Rule 54    select_item -> conditional_expr AS ID
Rule 55    table_expr -> ID DOT ID
Rule 56    table_expr -> ID
Rule 57    where_clause -> <empty>
Rule 58    where_clause -> WHERE expression
Rule 59    where_clause -> WHERE ID BETWEEN between_expr AND between_expr
Rule 60    where_clause -> WHERE ID NOT BETWEEN between_expr AND between_expr
Rule 61    where_clause -> WHERE ID IN LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
Rule 62    where_clause -> WHERE ID NOT IN LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
Rule 63    where_clause -> WHERE ID IN LEFT_PARENTHESIS select_statement RIGHT_PARENTHESIS
Rule 64    where_clause -> WHERE ID NOT IN LEFT_PARENTHESIS select_statement RIGHT_PARENTHESIS
Rule 65    where_clause -> WHERE ID LIKE STRING
Rule 66    where_clause -> WHERE EXISTS LEFT_PARENTHESIS select_statement
Rule 67    where_clause -> WHERE NOT EXISTS LEFT_PARENTHESIS select_statement
Rule 68    between_expr -> ID
Rule 69    between_expr -> ID DOT ID
Rule 70    between_expr -> NUMBER
Rule 71    between_expr -> ABS LEFT_PARENTHESIS ID RIGHT_PARENTHESIS
Rule 72    between_expr -> ABS LEFT_PARENTHESIS NUMBER RIGHT_PARENTHESIS
Rule 73    between_expr -> STRING
Rule 74    group_by_clause -> GROUP BY expression_list
Rule 75    having_clause -> HAVING expression
Rule 76    order_by_clause -> ORDER BY order_list
Rule 77    order_item -> expression ASC
Rule 78    order_item -> expression DESC
Rule 79    order_item -> expression
Rule 80    order_list -> order_list COMMA order_item
Rule 81    order_list -> order_item
Rule 82    limit_clause -> LIMIT NUMBER
Rule 83    expression_list -> expression_list COMMA expression
Rule 84    expression_list -> expression
Rule 85    expression -> ID
Rule 86    expression -> ID DOT ID
Rule 87    expression -> NUMBER
Rule 88    expression -> ABS LEFT_PARENTHESIS ID RIGHT_PARENTHESIS
Rule 89    expression -> ABS LEFT_PARENTHESIS NUMBER RIGHT_PARENTHESIS
Rule 90    expression -> STRING
Rule 91    expression -> NULL
Rule 92    expression -> expression PLUS expression
Rule 93    expression -> expression MINUS expression
Rule 94    expression -> expression TIMES expression
Rule 95    expression -> expression DIVIDE expression
Rule 96    expression -> expression EQUALS expression
Rule 97    expression -> expression LESS_OR_EQUAL expression
Rule 98    expression -> expression LESS_THAN expression
Rule 99    expression -> expression GREATER_THAN expression
Rule 100   expression -> expression GREATER_OR_EQUAL expression
Rule 101   expression -> expression AND expression
Rule 102   expression -> expression OR expression
Rule 103   expression -> NOT expression
Rule 104   expression -> DATEPART LEFT_PARENTHESIS ID COMMA STRING RIGHT_PARENTHESIS
Rule 105   expression -> LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
Rule 106   expression -> COUNT LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
Rule 107   expression -> AVG LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
Rule 108   expression -> MIN LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
Rule 109   expression -> MAX LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
Rule 110   expression -> SUM LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
Rule 111   expression -> conditional_expr
Rule 112   insert_statement -> INSERT INTO ID LEFT_PARENTHESIS column_list RIGHT_PARENTHESIS VALUES LEFT_PARENTHESIS value_list RIGHT_PARENTHESIS SEMICOLON
Rule 113   column_list -> column_list COMMA ID
Rule 114   column_list -> ID
Rule 115   value_list -> value_list COMMA value
Rule 116   value_list -> value
Rule 117   value -> NUMBER
Rule 118   value -> STRING
Rule 119   value -> ID
Rule 120   value -> NULL
Rule 121   update_statement -> UPDATE ID SET set_list where_clause SEMICOLON
Rule 122   conditional_expr -> IF expression THEN expression END
Rule 123   conditional_expr -> IF expression THEN expression ELSE expression
Rule 124   conditional_expr -> IF expression THEN expression elsif_list ELSE expression END
Rule 125   conditional_expr -> CASE case_expr END
Rule 126   elsif_list -> ELSIF LEFT_PARENTHESIS expression THEN expression
Rule 127   elsif_list -> elsif_list ELSIF LEFT_PARENTHESIS expression THEN expression
Rule 128   case_expr -> WHEN expression THEN expression
Rule 129   case_expr -> WHEN expression THEN expression case_expr
Rule 130   set_list -> set_list COMMA ID EQUALS value
Rule 131   set_list -> ID EQUALS value
Rule 132   delete_statement -> DELETE FROM ID where_clause SEMICOLON
Rule 133   create_statement -> CREATE TABLE ID LEFT_PARENTHESIS column_def_list RIGHT_PARENTHESIS SEMICOLON
Rule 134   create_statement -> CREATE SCHEMA ID SEMICOLON
Rule 135   create_statement -> CREATE FUNCTION ID LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS RETURNS data_type LANGUAGE ID AS function_body
Rule 136   create_statement -> CREATE OR REPLACE FUNCTION ID LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS RETURNS data_type LANGUAGE ID AS function_body
Rule 137   column_def_list -> column_def_list COMMA column_def
Rule 138   column_def_list -> column_def
Rule 139   column_def -> ID data_type
Rule 140   column_def -> ID data_type column_constraints
Rule 141   parameter_list -> parameter_list COMMA parameter
Rule 142   parameter_list -> parameter
Rule 143   parameter -> ID data_type
Rule 144   function_body -> DOLARS DECLARE parameter_list SEMICOLON BEGIN STRING END SEMICOLON DOLARS SEMICOLON
Rule 145   data_type -> INT
Rule 146   data_type -> VARCHAR LEFT_PARENTHESIS NUMBER RIGHT_PARENTHESIS
Rule 147   data_type -> FLOAT LEFT_PARENTHESIS NUMBER RIGHT_PARENTHESIS
Rule 148   column_constraints -> column_constraints column_constraint
Rule 149   column_constraints -> column_constraint
Rule 150   column_constraint -> NOT NULL
Rule 151   column_constraint -> UNIQUE
Rule 152   column_constraint -> PRIMARY_KEY
Rule 153   column_constraint -> FOREIGN_KEY LEFT_PARENTHESIS ID RIGHT_PARENTHESIS REFERENCES ID LEFT_PARENTHESIS ID RIGHT_PARENTHESIS
Rule 154   column_constraint -> CHECK LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
Rule 155   column_constraint -> DEFAULT value
Rule 156   join_expr -> join_type table_expr ON expression
Rule 157   join_expr -> join_expr join_type table_expr ON expression
Rule 158   join_type -> INNER JOIN
Rule 159   join_type -> LEFT JOIN
Rule 160   join_type -> RIGHT JOIN
Rule 161   join_type -> FULL JOIN
Rule 162   join_type -> OUTER JOIN
Rule 163   join_type -> JOIN
Rule 164   alter_statement -> ALTER TABLE ID alter_actions SEMICOLON
Rule 165   alter_actions -> alter_actions alter_action
Rule 166   alter_actions -> alter_action
Rule 167   alter_action -> ADD COLUMN column_def
Rule 168   alter_action -> ADD CONSTRAINT ID constraint_def
Rule 169   alter_action -> DROP COLUMN ID
Rule 170   alter_action -> DROP CONSTRAINT ID
Rule 171   constraint_def -> UNIQUE LEFT_PARENTHESIS ID RIGHT_PARENTHESIS
Rule 172   constraint_def -> PRIMARY_KEY LEFT_PARENTHESIS ID RIGHT_PARENTHESIS
Rule 173   constraint_def -> FOREIGN_KEY LEFT_PARENTHESIS ID RIGHT_PARENTHESIS REFERENCES ID LEFT_PARENTHESIS ID RIGHT_PARENTHESIS
Rule 174   constraint_def -> CHECK LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
Rule 175   constraint_def -> DEFAULT value
Rule 176   drop_statement -> DROP TABLE ID SEMICOLON
Rule 177   drop_statement -> DROP COLUMN ID DOT ID SEMICOLON

Terminals, with rules where they appear

ABS                  : 71 72 88 89
ADD                  : 167 168
ALL                  : 11
ALTER                : 164
AND                  : 59 60 101
ANY                  : 
AS                   : 51 54 135 136
ASC                  : 77
AVG                  : 107
BEGIN                : 144
BETWEEN              : 59 60
BY                   : 74 76
CASE                 : 125
CHECK                : 154 174
COALESCE             : 53
COLUMN               : 167 169 177
COMMA                : 46 80 83 104 113 115 130 137 141
CONSTRAINT           : 168 170
COUNT                : 106
CREATE               : 133 134 135 136
DATABASE             : 
DATEPART             : 104
DECLARE              : 144
DEFAULT              : 155 175
DELETE               : 132
DESC                 : 78
DISTINCT             : 50
DIVIDE               : 95
DOLARS               : 144 144
DOT                  : 55 69 86 177
DROP                 : 169 170 176 177
ELSE                 : 123 124
ELSIF                : 126 127
END                  : 122 124 125 144
EQUALS               : 96 130 131
EXCEPT               : 13
EXISTS               : 66 67
FLOAT                : 147
FOREIGN_KEY          : 153 173
FROM                 : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 132
FULL                 : 161
FUNCTION             : 135 136
GREATER_OR_EQUAL     : 100
GREATER_THAN         : 99
GROUP                : 74
HAVING               : 75
ID                   : 51 54 55 55 56 59 60 61 62 63 64 65 68 69 69 71 85 86 86 88 104 112 113 114 119 121 130 131 132 133 134 135 135 136 136 139 140 143 153 153 153 164 168 169 170 171 172 173 173 173 176 177 177
IF                   : 122 123 124
IN                   : 61 62 63 64
INNER                : 158
INSERT               : 112
INT                  : 145
INTERSECT            : 12
INTO                 : 112
JOIN                 : 158 159 160 161 162 163
LANGUAGE             : 135 136
LEFT                 : 159
LEFT_PARENTHESIS     : 53 61 62 63 64 66 67 71 72 88 89 104 105 106 107 108 109 110 112 112 126 127 133 135 136 146 147 153 153 154 171 172 173 173 174
LESS_OR_EQUAL        : 97
LESS_THAN            : 98
LIKE                 : 65
LIMIT                : 82
MAX                  : 109
MIN                  : 108
MINUS                : 93
NEWLINE              : 
NOT                  : 60 62 64 67 103 150
NULL                 : 91 120 150
NUMBER               : 70 72 82 87 89 117 146 147
ON                   : 156 157
OR                   : 102 136
ORDER                : 76
OUTER                : 162
PLUS                 : 92
PRIMARY_KEY          : 152 172
REFERENCES           : 153 173
REPLACE              : 136
RETURNS              : 135 136
RIGHT                : 160
RIGHT_PARENTHESIS    : 53 61 62 63 64 71 72 88 89 104 105 106 107 108 109 110 112 112 133 135 136 146 147 153 153 154 171 172 173 173 174
SCHEMA               : 134
SELECT               : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
SEMICOLON            : 3 10 11 12 13 112 121 132 133 134 144 144 144 164 176 177
SET                  : 121
STRING               : 65 73 90 104 118 144
SUM                  : 110
TABLE                : 133 164 176
THEN                 : 122 123 124 126 127 128 129
TIMES                : 48 94
UNION                : 10 11
UNIQUE               : 151 171
UPDATE               : 121
VALUES               : 112
VARCHAR              : 146
WHEN                 : 128 129
WHERE                : 58 59 60 61 62 63 64 65 66 67
error                : 

Nonterminals, with rules where they appear

alter_action         : 165 166
alter_actions        : 164 165
alter_statement      : 8
between_expr         : 59 59 60 60
case_expr            : 125 129
column_constraint    : 148 149
column_constraints   : 140 148
column_def           : 137 138 167
column_def_list      : 133 137
column_list          : 112 113
conditional_expr     : 49 54 111
constraint_def       : 168
create_statement     : 7
data_type            : 135 136 139 140 143
delete_statement     : 6
dist_list            : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
drop_statement       : 9
elsif_list           : 124 127
expression           : 51 52 58 75 77 78 79 83 84 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 105 122 122 123 123 123 124 124 124 126 126 127 127 128 128 129 129 154 156 157 174
expression_list      : 53 61 62 74 83 106 107 108 109 110
function_body        : 135 136
group_by_clause      : 14 16 17 18 22 24 25 26 30 32 33 34 38 40 41 42
having_clause        : 14 16 22 24 30 32 38 40
insert_statement     : 4
join_expr            : 14 15 16 17 18 19 20 21 30 31 32 33 34 35 36 37 157
join_type            : 156 157
limit_clause         : 14 17 19 22 25 27 30 33 35 38 41 43
order_by_clause      : 14 15 17 19 22 23 25 27 30 31 33 35 38 39 41 43
order_item           : 80 81
order_list           : 76 80
parameter            : 141 142
parameter_list       : 135 136 141 144
select_item          : 46 47
select_list          : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
select_statement     : 3 10 10 11 11 12 12 13 13 63 64 66 67
set_list             : 121 130
statement            : 2 0
statement2           : 1 2
table_expr           : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 156 157
update_statement     : 5
value                : 115 116 130 131 155 175
value_list           : 112 115
where_clause         : 14 15 16 17 18 19 20 22 23 24 25 26 27 28 30 31 32 33 34 35 36 38 39 40 41 42 43 44 121 132

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . statement2
    (2) statement -> . statement statement2
    (3) statement2 -> . select_statement SEMICOLON
    (4) statement2 -> . insert_statement
    (5) statement2 -> . update_statement
    (6) statement2 -> . delete_statement
    (7) statement2 -> . create_statement
    (8) statement2 -> . alter_statement
    (9) statement2 -> . drop_statement
    (10) statement2 -> . select_statement UNION select_statement SEMICOLON
    (11) statement2 -> . select_statement UNION ALL select_statement SEMICOLON
    (12) statement2 -> . select_statement INTERSECT select_statement SEMICOLON
    (13) statement2 -> . select_statement EXCEPT select_statement SEMICOLON
    (14) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause having_clause order_by_clause limit_clause
    (15) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause order_by_clause
    (16) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause having_clause
    (17) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause order_by_clause limit_clause
    (18) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause
    (19) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause order_by_clause limit_clause
    (20) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause
    (21) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr
    (22) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause group_by_clause having_clause order_by_clause limit_clause
    (23) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause order_by_clause
    (24) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause group_by_clause having_clause
    (25) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause group_by_clause order_by_clause limit_clause
    (26) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause group_by_clause
    (27) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause order_by_clause limit_clause
    (28) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause
    (29) select_statement -> . SELECT dist_list select_list FROM table_expr
    (30) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause group_by_clause having_clause order_by_clause limit_clause
    (31) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause order_by_clause
    (32) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause group_by_clause having_clause
    (33) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause group_by_clause order_by_clause limit_clause
    (34) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause group_by_clause
    (35) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause order_by_clause limit_clause
    (36) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause
    (37) select_statement -> . SELECT select_list FROM table_expr join_expr
    (38) select_statement -> . SELECT select_list FROM table_expr where_clause group_by_clause having_clause order_by_clause limit_clause
    (39) select_statement -> . SELECT select_list FROM table_expr where_clause order_by_clause
    (40) select_statement -> . SELECT select_list FROM table_expr where_clause group_by_clause having_clause
    (41) select_statement -> . SELECT select_list FROM table_expr where_clause group_by_clause order_by_clause limit_clause
    (42) select_statement -> . SELECT select_list FROM table_expr where_clause group_by_clause
    (43) select_statement -> . SELECT select_list FROM table_expr where_clause order_by_clause limit_clause
    (44) select_statement -> . SELECT select_list FROM table_expr where_clause
    (45) select_statement -> . SELECT select_list FROM table_expr
    (112) insert_statement -> . INSERT INTO ID LEFT_PARENTHESIS column_list RIGHT_PARENTHESIS VALUES LEFT_PARENTHESIS value_list RIGHT_PARENTHESIS SEMICOLON
    (121) update_statement -> . UPDATE ID SET set_list where_clause SEMICOLON
    (132) delete_statement -> . DELETE FROM ID where_clause SEMICOLON
    (133) create_statement -> . CREATE TABLE ID LEFT_PARENTHESIS column_def_list RIGHT_PARENTHESIS SEMICOLON
    (134) create_statement -> . CREATE SCHEMA ID SEMICOLON
    (135) create_statement -> . CREATE FUNCTION ID LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS RETURNS data_type LANGUAGE ID AS function_body
    (136) create_statement -> . CREATE OR REPLACE FUNCTION ID LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS RETURNS data_type LANGUAGE ID AS function_body
    (164) alter_statement -> . ALTER TABLE ID alter_actions SEMICOLON
    (176) drop_statement -> . DROP TABLE ID SEMICOLON
    (177) drop_statement -> . DROP COLUMN ID DOT ID SEMICOLON

    SELECT          shift and go to state 10
    INSERT          shift and go to state 11
    UPDATE          shift and go to state 12
    DELETE          shift and go to state 13
    CREATE          shift and go to state 14
    ALTER           shift and go to state 15
    DROP            shift and go to state 16

    statement                      shift and go to state 1
    statement2                     shift and go to state 2
    select_statement               shift and go to state 3
    insert_statement               shift and go to state 4
    update_statement               shift and go to state 5
    delete_statement               shift and go to state 6
    create_statement               shift and go to state 7
    alter_statement                shift and go to state 8
    drop_statement                 shift and go to state 9

state 1

    (0) S' -> statement .
    (2) statement -> statement . statement2
    (3) statement2 -> . select_statement SEMICOLON
    (4) statement2 -> . insert_statement
    (5) statement2 -> . update_statement
    (6) statement2 -> . delete_statement
    (7) statement2 -> . create_statement
    (8) statement2 -> . alter_statement
    (9) statement2 -> . drop_statement
    (10) statement2 -> . select_statement UNION select_statement SEMICOLON
    (11) statement2 -> . select_statement UNION ALL select_statement SEMICOLON
    (12) statement2 -> . select_statement INTERSECT select_statement SEMICOLON
    (13) statement2 -> . select_statement EXCEPT select_statement SEMICOLON
    (14) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause having_clause order_by_clause limit_clause
    (15) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause order_by_clause
    (16) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause having_clause
    (17) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause order_by_clause limit_clause
    (18) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause group_by_clause
    (19) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause order_by_clause limit_clause
    (20) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr where_clause
    (21) select_statement -> . SELECT dist_list select_list FROM table_expr join_expr
    (22) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause group_by_clause having_clause order_by_clause limit_clause
    (23) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause order_by_clause
    (24) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause group_by_clause having_clause
    (25) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause group_by_clause order_by_clause limit_clause
    (26) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause group_by_clause
    (27) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause order_by_clause limit_clause
    (28) select_statement -> . SELECT dist_list select_list FROM table_expr where_clause
    (29) select_statement -> . SELECT dist_list select_list FROM table_expr
    (30) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause group_by_clause having_clause order_by_clause limit_clause
    (31) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause order_by_clause
    (32) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause group_by_clause having_clause
    (33) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause group_by_clause order_by_clause limit_clause
    (34) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause group_by_clause
    (35) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause order_by_clause limit_clause
    (36) select_statement -> . SELECT select_list FROM table_expr join_expr where_clause
    (37) select_statement -> . SELECT select_list FROM table_expr join_expr
    (38) select_statement -> . SELECT select_list FROM table_expr where_clause group_by_clause having_clause order_by_clause limit_clause
    (39) select_statement -> . SELECT select_list FROM table_expr where_clause order_by_clause
    (40) select_statement -> . SELECT select_list FROM table_expr where_clause group_by_clause having_clause
    (41) select_statement -> . SELECT select_list FROM table_expr where_clause group_by_clause order_by_clause limit_clause
    (42) select_statement -> . SELECT select_list FROM table_expr where_clause group_by_clause
    (43) select_statement -> . SELECT select_list FROM table_expr where_clause order_by_clause limit_clause
    (44) select_statement -> . SELECT select_list FROM table_expr where_clause
    (45) select_statement -> . SELECT select_list FROM table_expr
    (112) insert_statement -> . INSERT INTO ID LEFT_PARENTHESIS column_list RIGHT_PARENTHESIS VALUES LEFT_PARENTHESIS value_list RIGHT_PARENTHESIS SEMICOLON
    (121) update_statement -> . UPDATE ID SET set_list where_clause SEMICOLON
    (132) delete_statement -> . DELETE FROM ID where_clause SEMICOLON
    (133) create_statement -> . CREATE TABLE ID LEFT_PARENTHESIS column_def_list RIGHT_PARENTHESIS SEMICOLON
    (134) create_statement -> . CREATE SCHEMA ID SEMICOLON
    (135) create_statement -> . CREATE FUNCTION ID LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS RETURNS data_type LANGUAGE ID AS function_body
    (136) create_statement -> . CREATE OR REPLACE FUNCTION ID LEFT_PARENTHESIS parameter_list RIGHT_PARENTHESIS RETURNS data_type LANGUAGE ID AS function_body
    (164) alter_statement -> . ALTER TABLE ID alter_actions SEMICOLON
    (176) drop_statement -> . DROP TABLE ID SEMICOLON
    (177) drop_statement -> . DROP COLUMN ID DOT ID SEMICOLON

    SELECT          shift and go to state 10
    INSERT          shift and go to state 11
    UPDATE          shift and go to state 12
    DELETE          shift and go to state 13
    CREATE          shift and go to state 14
    ALTER           shift and go to state 15
    DROP            shift and go to state 16

    statement2                     shift and go to state 17
    select_statement               shift and go to state 3
    insert_statement               shift and go to state 4
    update_statement               shift and go to state 5
    delete_statement               shift and go to state 6
    create_statement               shift and go to state 7
    alter_statement                shift and go to state 8
    drop_statement                 shift and go to state 9

state 2

    (1) statement -> statement2 .

    SELECT          reduce using rule 1 (statement -> statement2 .)
    INSERT          reduce using rule 1 (statement -> statement2 .)
    UPDATE          reduce using rule 1 (statement -> statement2 .)
    DELETE          reduce using rule 1 (statement -> statement2 .)
    CREATE          reduce using rule 1 (statement -> statement2 .)
    ALTER           reduce using rule 1 (statement -> statement2 .)
    DROP            reduce using rule 1 (statement -> statement2 .)
    $end            reduce using rule 1 (statement -> statement2 .)


state 3

    (3) statement2 -> select_statement . SEMICOLON
    (10) statement2 -> select_statement . UNION select_statement SEMICOLON
    (11) statement2 -> select_statement . UNION ALL select_statement SEMICOLON
    (12) statement2 -> select_statement . INTERSECT select_statement SEMICOLON
    (13) statement2 -> select_statement . EXCEPT select_statement SEMICOLON

    SEMICOLON       shift and go to state 18
    UNION           shift and go to state 19
    INTERSECT       shift and go to state 20
    EXCEPT          shift and go to state 21


state 4

    (4) statement2 -> insert_statement .

    SELECT          reduce using rule 4 (statement2 -> insert_statement .)
    INSERT          reduce using rule 4 (statement2 -> insert_statement .)
    UPDATE          reduce using rule 4 (statement2 -> insert_statement .)
    DELETE          reduce using rule 4 (statement2 -> insert_statement .)
    CREATE          reduce using rule 4 (statement2 -> insert_statement .)
    ALTER           reduce using rule 4 (statement2 -> insert_statement .)
    DROP            reduce using rule 4 (statement2 -> insert_statement .)
    $end            reduce using rule 4 (statement2 -> insert_statement .)


state 5

    (5) statement2 -> update_statement .

    SELECT          reduce using rule 5 (statement2 -> update_statement .)
    INSERT          reduce using rule 5 (statement2 -> update_statement .)
    UPDATE          reduce using rule 5 (statement2 -> update_statement .)
    DELETE          reduce using rule 5 (statement2 -> update_statement .)
    CREATE          reduce using rule 5 (statement2 -> update_statement .)
    ALTER           reduce using rule 5 (statement2 -> update_statement .)
    DROP            reduce using rule 5 (statement2 -> update_statement .)
    $end            reduce using rule 5 (statement2 -> update_statement .)


state 6

    (6) statement2 -> delete_statement .

    SELECT          reduce using rule 6 (statement2 -> delete_statement .)
    INSERT          reduce using rule 6 (statement2 -> delete_statement .)
    UPDATE          reduce using rule 6 (statement2 -> delete_statement .)
    DELETE          reduce using rule 6 (statement2 -> delete_statement .)
    CREATE          reduce using rule 6 (statement2 -> delete_statement .)
    ALTER           reduce using rule 6 (statement2 -> delete_statement .)
    DROP            reduce using rule 6 (statement2 -> delete_statement .)
    $end            reduce using rule 6 (statement2 -> delete_statement .)


state 7

    (7) statement2 -> create_statement .

    SELECT          reduce using rule 7 (statement2 -> create_statement .)
    INSERT          reduce using rule 7 (statement2 -> create_statement .)
    UPDATE          reduce using rule 7 (statement2 -> create_statement .)
    DELETE          reduce using rule 7 (statement2 -> create_statement .)
    CREATE          reduce using rule 7 (statement2 -> create_statement .)
    ALTER           reduce using rule 7 (statement2 -> create_statement .)
    DROP            reduce using rule 7 (statement2 -> create_statement .)
    $end            reduce using rule 7 (statement2 -> create_statement .)


state 8

    (8) statement2 -> alter_statement .

    SELECT          reduce using rule 8 (statement2 -> alter_statement .)
    INSERT          reduce using rule 8 (statement2 -> alter_statement .)
    UPDATE          reduce using rule 8 (statement2 -> alter_statement .)
    DELETE          reduce using rule 8 (statement2 -> alter_statement .)
    CREATE          reduce using rule 8 (statement2 -> alter_statement .)
    ALTER           reduce using rule 8 (statement2 -> alter_statement .)
    DROP            reduce using rule 8 (statement2 -> alter_statement .)
    $end            reduce using rule 8 (statement2 -> alter_statement .)


state 9

    (9) statement2 -> drop_statement .
